b=479995 handle drag-failed signal when available. r=enndeakin sr=roc